--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "URL shortener",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "nodemon server.js"
   },
   "author": "Ilhamosaurus",
   "license": "MIT",
@@ -13,5 +14,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "valid-url": "^1.0.9"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
